@@ -7,21 +7,21 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	6.66 (gritter) 5/1/06";
+	"@(#)/usr/ucb/otfdump.sl	6.67 (gritter) 5/1/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  6.66 (gritter) 5/1/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 6.66 (gritter) 5/1/06";
+static const char sccsid[] USED = "@(#)dpost.sl  6.67 (gritter) 5/1/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 6.67 (gritter) 5/1/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.66 (gritter) 5/1/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	6.67 (gritter) 5/1/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.66 (gritter) 5/1/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	6.67 (gritter) 5/1/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "6.66";
+const char revision[] = "6.67";
 /* SLIST */
 /*
 ext.h: * Sccsid @(#)ext.h	1.43 (gritter) 4/26/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
-n1.c: * Sccsid @(#)n1.c	1.75 (gritter) 4/26/06
+n1.c: * Sccsid @(#)n1.c	1.76 (gritter) 5/1/06
 n2.c: * Sccsid @(#)n2.c	1.20 (gritter) 4/27/06
 n3.c: * Sccsid @(#)n3.c	1.85 (gritter) 4/27/06
 n4.c: * Sccsid @(#)n4.c	1.26 (gritter) 4/25/06
@@ -46,7 +46,7 @@ troff.d/otf.c: * Sccsid @(#)otf.c	1.55 (gritter) 4/20/06
 troff.d/otfdump.c: * Sccsid @(#)otfdump.c	1.15 (gritter) 3/16/06
 troff.d/proto.h: * Sccsid @(#)proto.h	1.44 (gritter) 4/25/06
 troff.d/t10.c: * Sccsid @(#)t10.c	1.70 (gritter) 4/25/06
-troff.d/t6.c: * Sccsid @(#)t6.c	1.142 (gritter) 5/1/06
+troff.d/t6.c: * Sccsid @(#)t6.c	1.143 (gritter) 5/1/06
 troff.d/troff.h: * Sccsid @(#)troff.h	1.23 (gritter) 4/14/06
 troff.d/unimap.c: * Sccsid @(#)unimap.c	1.13 (gritter) 2/16/06
 troff.d/unimap.h: * Sccsid @(#)unimap.h	1.2 (gritter) 12/22/05
